--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,6 +16,7 @@
 
     $('.datepicker').pickadate({
       format: 'mmmm dd, yyyy',
+      min: true,
       onStart: function ()
         {
           var date = new Date();
