--- a/app/views/mains/_practice_areas.haml
+++ b/app/views/mains/_practice_areas.haml
@@ -10,7 +10,7 @@
           .practice-area-one{style: "background-image: url(#{image});"}
             .blue-overlay
           %div.p-20.ta-center
-            %h5.c-drk-gray= @main.practice_area_1_title
+            %h5.c-drk-gray.main-title= @main.practice_area_1_title
             %p.p-x-15= @main.practice_area_1_copy
             %span.bottom-line
               %h4
@@ -22,8 +22,8 @@
           .practice-area-one{style: "background-image: url(#{image});"}
             .blue-overlay
           %div.p-20.ta-center
-            %h5.c-drk-gray= @main.practice_area_2_title
-            %p.p-x-15= @main.practice_area_2_copy
+            %h5.c-drk-gray.main-title= @main.practice_area_2_title
+            %p.py-15= @main.practice_area_2_copy
             %span.bottom-line
               %h4
                 %span.c-orange{"data-icon" => "p"}
@@ -34,8 +34,8 @@
           .practice-area-one{style: "background-image: url(#{image});"}
             .blue-overlay
           %div.p-20.ta-center
-            %h5.c-drk-gray= @main.practice_area_3_title
-            %p.p-x-15= @main.practice_area_3_copy
+            %h5.c-drk-gray.main-title= @main.practice_area_3_title
+            %p.py-15= @main.practice_area_3_copy
             %span.bottom-line
               %h4
                 %span.c-orange{"data-icon" => "p"}
