--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -12,7 +12,7 @@ p small {
 a {
   color: $base-link-color;
   text-decoration: none;
-  @include transition(color 0.1s linear);
+  @include transition(all 0.1s linear);
 
   &:hover {
     color: $hover-link-color;
