--- a/app/views/posts/index.haml
+++ b/app/views/posts/index.haml
@@ -2,15 +2,19 @@
   - @posts.each do |post|
     .strata
       .row
-        .small-10.small-offset-1.columns.ta-center
-          %p.m-bottom-30
-            %small{style: "text-transform: uppercase;"}= post.created_at.strftime("%B %d, %Y")
-          %h2.c-blue= post.title
-          %p.m-bottom-20
-            by
-            %span.c-drk-gray= post.author
-          %p.m-bottom-30= Nokogiri::HTML.parse(post.body).css('p').first.text
-          = link_to post_path(post) do
+        = link_to post_path(post) do
+          .small-10.small-offset-1.columns.ta-center
+            %p.m-bottom-30
+              %small{style: "text-transform: uppercase;"}= post.created_at.strftime("%B %d, %Y")
+            %h2.c-blue.main-title= post.title
+            %p.m-bottom-20
+              by
+              %span.c-drk-gray= post.author
+            %p.m-bottom-30= Nokogiri::HTML.parse(post.body).css('p').first.text
             %h3.c-orange
               %span{"data-icon" => "p"}
+  .strata
+    .row
+      .small-12.columns
+        = will_paginate @posts, :previous_label => "<span class='btn-text m-right-5', data-icon='R'></span> Previous", :next_label => "Next <span class='btn-text m-left-5', data-icon='p'></span>"
 
