--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -8,6 +8,8 @@
 					= active_link_to "Success Stories", successes_path, class: "footer-link main-footer", :class_active => "current"
 				%li.footer-item
 					= active_link_to "Contact", contact_path, class: "footer-link main-footer", :class_active => "current"
+				%li.footer-item
+					= active_link_to "Blog", posts_path, class: "footer-link main-footer", :class_active => "current"
 		.small-12.medium-4.columns
 			- contact = Contact.all
 			%ul.f-right.l-no-style
