--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,14 @@
 	<link rel="icon" href="https://s3-us-west-2.amazonaws.com/bcg-site-assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div id="fb-root"></div>
   <script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
+  document.getElementById('shareBtn').onclick = function() {
+    FB.ui({
+      display: 'popup',
+      method: 'share',
+      href: '#{post_path(@post)',
+    }, function(response){});
+  }
   </script>
   <div class="container"><%= yield %></div>
   <%= render 'layouts/footer' %>
