--- a/app/views/mains/_top_announcement.haml
+++ b/app/views/mains/_top_announcement.haml
@@ -2,7 +2,7 @@
   .row
     .small-12.medium-3.columns
       %div.ta-center
-        = image_tag('bloom-leaf-orange.svg', style: "max-height: 130px;")
+        = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image1-8.png', style: "max-height: 130px;")
     .small-12.medium-9.columns
       %h4.c-drk-gray= @main.stratum_1_title
       %p.c-drk-gray.p-top-10= @main.stratum_1_copy
