--- a/app/views/apportal/index.html.haml
+++ b/app/views/apportal/index.html.haml
@@ -7,12 +7,17 @@
       %span.m-right-5.h5-icon{"data-icon" => "i"}
       Back To Top
 .strata-small
-  .row.p-top-30
+  .row
+    .small-12.large-9.columns.bgc-blue.p-20
+      %p.p-top-10.c-white Offer: Call Bloom before January 31, 2014  and receive a one day free consultation from one of our expert Consultants and Solution Architects ($3,000 value). End the day with 2 tangible deliverables: Apportal Solution strategy and a prototype Apportal on a USB to share with your peers and manager.
+      %p.p-top-10.c-white Bloom is one of an elite group of US partners trained on the development of Apportals. Bloom can build and launch solutions in as few as 3 weeks. For more complex projects, Bloom can build a Apportal Proof of Concept for a small investment.
+.strata-small
+  .row.p-top-10
     .small-12.columns
       %h3.c-blue Marketing and Sales Apportals!  
   .row
     .small-12.large-9.columns
-      %p.p-top-5 Apportals are about disseminating information in a highly targeted way by role.  They are about grouping modern Windows 8 applications, enterprise applications, key performance indicators with quick access to business intelligence reporting, and pinned links on the desktop with the ease of the kiosk’s touch interface.  Apportals are for marketing and sales executives that want to innovate and add mobile and cloud-first applications to their toolkit.
+      %p.p-top-5 Apportals are about disseminating information in a highly targeted way by role. They are about grouping modern Windows 8 applications, enterprise applications, key performance indicators with quick access to business intelligence reporting, and pinned links on the desktop with the ease of the kiosk’s touch interface.  Apportals are for marketing and sales executives that want to innovate and add mobile and cloud-first applications to their toolkit.
   .row
     .small-12.large-9.columns
       %h6.c-drk-gray.p-top-10 Why is an Apportal a game-changer for Marketing and Sales Executives?
@@ -25,7 +30,7 @@
       %p.p-top-5 Access to pipeline, revenue data and internal applications quickly and in a summary view.  
       %p.p-top-10 Account Managers need…
       %p.p-top-5 Access to pipeline, revenue data, and internal applications quickly for their portfolio of customers.
-      %p.p-top-10 Today, sales roles must open individual apps one by one, filter on data, and calculate key performance indicators manually to get what they need.  Tomorrow, Bloom can provide your organization a customized Sales Apportal that is unique for the Sales Executive and the Sales Account Manager.  Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need with the touch of the screen.
+      %p.p-top-10 Today, sales roles must open individual apps one by one, filter on data, and calculate key performance indicators manually to get what they need. Tomorrow, Bloom can provide your organization a customized Sales Apportal that is unique for the Sales Executive and the Sales Account Manager. Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need with the touch of the screen.
       %p.p-top-10 In the example below, this Sales Apportal solution was designed to display pipeline KPIs, attainment KPIs, pipeline hygiene and seller applications from the desktop or a mobile environment.
   .strata-small
     .row.p-20
@@ -41,15 +46,15 @@
       %p.p-top-10 Marketing Managers need…
       %p.p-top-5 Access to campaign performance metrics , including costs, leads generated and converted to sales opportunities, revenue, and ROI, plus marketing resources and tools that they use every day quickly and easily.
       %p.p-top-10 Tradeshow Leads need…
-      %p.p-top-5 To display customize and interactive tiles on the desktop to excite show attendees at the booth.  Today, they use powerpoint presentations and videos.  Tomorrow, Bloom can provide your organization with a customized, interactive, touch screen enabled set of tiles with links to giveaways forms, applications, live, streaming videos, demos of your products.  This customized view can be experienced on TV—size touch screens, tablets, or mobile devices.
+      %p.p-top-5 To display customize and interactive tiles on the desktop to excite show attendees at the booth. Today, they use powerpoint presentations and videos. Tomorrow, Bloom can provide your organization with a customized, interactive, touch screen enabled set of tiles with links to giveaways forms, applications, live, streaming videos, demos of your products. This customized view can be experienced on TV—size touch screens, tablets, or mobile devices.
       %p.p-top-10 Internal Communication Leads need…
-      %p.p-top-5 To disseminate company news to employees around the world.  Today, many communication specialists deliver their communication via a static, HTML-based email to employee inboxes.  Tomorrow, Bloom can provide your organization a customized Marketing or Internal Communication Apportal that is unique for every employee based on their role function in the organization.  Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need to know with the touch of the screen.
+      %p.p-top-5 To disseminate company news to employees around the world.  Today, many communication specialists deliver their communication via a static, HTML-based email to employee inboxes. Tomorrow, Bloom can provide your organization a customized Marketing or Internal Communication Apportal that is unique for every employee based on their role function in the organization. Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need to know with the touch of the screen.
   .row
     .small-12.large-9.columns
       %h6.c-drk-gray.p-top-10 Unlocking the power of role-based Apportal access
   .row
     .small-12.large-6.columns
-      %p.p-top-10 Unlock the power of the cloud with Enterprise-level Identity Services.  Enable users to work from virtually any location using any device.  Give them always-on access to all their work resources using a single set of credentials protected with multi-factor authentication.  After a user has signed in, they get a single sign-on access to their apps and data directly in their Apportal.  Clients can also use Microsoft Azure Active Directory at a global scale to centrally manage employees’ access and provide single sign-on to Microsoft services such as Microsoft Azure, Microsoft O365, Microsoft Dynamics CRM, Windows Intune, and thousands of non-Microsoft cloud applications.
+      %p.p-top-10 Unlock the power of the cloud with Enterprise-level Identity Services. Enable users to work from virtually any location using any device. Give them always-on access to all their work resources using a single set of credentials protected with multi-factor authentication. After a user has signed in, they get a single sign-on access to their apps and data directly in their Apportal. Clients can also use Microsoft Azure Active Directory at a global scale to centrally manage employees’ access and provide single sign-on to Microsoft services such as Microsoft Azure, Microsoft O365, Microsoft Dynamics CRM, Windows Intune, and thousands of non-Microsoft cloud applications.
     .small-12.large-3.columns
       = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image3-12.png', style: "max-height: 130px;")
     .small-12.large-3.columns
