updates to fonts

--- a/app/views/apportal/index.html.haml
+++ b/app/views/apportal/index.html.haml
@@ -9,7 +9,8 @@
 .strata-small
   .row
     .small-12.large-9.columns.bgc-blue.p-20
-      %p.p-top-10.c-white Offer: Call Bloom before January 31, 2014  and receive a one day free consultation from one of our expert Consultants and Solution Architects ($3,000 value). End the day with 2 tangible deliverables: Apportal Solution strategy and a prototype Apportal on a USB to share with your peers and manager.
+      %h4.c-white Offer: 
+      %p.p-top-10.c-white Call Bloom before January 31, 2014  and receive a one day free consultation from one of our expert Consultants and Solution Architects ($3,000 value). End the day with 2 tangible deliverables: Apportal Solution strategy and a prototype Apportal on a USB to share with your peers and manager.
       %p.p-top-10.c-white Bloom is one of an elite group of US partners trained on the development of Apportals. Bloom can build and launch solutions in as few as 3 weeks. For more complex projects, Bloom can build a Apportal Proof of Concept for a small investment.
 .strata-small
   .row.p-top-10
@@ -23,7 +24,7 @@
       %h6.c-drk-gray.p-top-10 Why is an Apportal a game-changer for Marketing and Sales Executives?
   .row.p-top-10
     .small-12.columns
-      %h5.c-blue.p-top-10 Sales
+      %h6.c-blue.p-top-10 Sales
   .row
     .small-12.large-9.columns
       %p.p-top-10 Sales Executives need… 
@@ -38,7 +39,7 @@
       = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image2-10.png', style: "max-width: 720px;")
   .row.p-top-10
     .small-12.columns
-      %h5.c-blue.p-top-10 Marketing
+      %h6.c-blue.p-top-10 Marketing
   .row
     .small-12.large-9.columns
       %p.p-top-10 Marketing Executives need… 
