--- a/app/views/apportal/index.html.haml
+++ b/app/views/apportal/index.html.haml
@@ -11,7 +11,7 @@
     .small-12.large-9.columns.bgc-blue.p-20
       %h4.c-white Offer: 
       %p.p-top-10.c-white Call Bloom before January 31, 2014  and receive a one day free consultation from one of our expert Consultants and Solution Architects ($3,000 value). End the day with 2 tangible deliverables: Apportal Solution strategy and a prototype Apportal on a USB to share with your peers and manager.
-      %p.p-top-10.c-white Bloom is one of an elite group of US partners trained on the development of Apportals. Bloom can build and launch solutions in as few as 3 weeks. For more complex projects, Bloom can build a Apportal Proof of Concept for a small investment.
+      %p.p-top-10.c-white Bloom is one of an elite group of US partners trained on the development of Apportals. Bloom can build and launch solutions in as few as 3 weeks. For more complex projects, Bloom can build an Apportal Proof of Concept for a small investment.
 .strata-small
   .row.p-top-10
     .small-12.columns
@@ -27,9 +27,9 @@
       %h6.c-blue.p-top-10 Sales
   .row
     .small-12.large-9.columns
-      %p.p-top-10 Sales Executives need… 
+      %p.p-top-10.c-orange Sales Executives need… 
       %p.p-top-5 Access to pipeline, revenue data and internal applications quickly and in a summary view.  
-      %p.p-top-10 Account Managers need…
+      %p.p-top-10.c-orange Account Managers need…
       %p.p-top-5 Access to pipeline, revenue data, and internal applications quickly for their portfolio of customers.
       %p.p-top-10 Today, sales roles must open individual apps one by one, filter on data, and calculate key performance indicators manually to get what they need. Tomorrow, Bloom can provide your organization a customized Sales Apportal that is unique for the Sales Executive and the Sales Account Manager. Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need with the touch of the screen.
       %p.p-top-10 In the example below, this Sales Apportal solution was designed to display pipeline KPIs, attainment KPIs, pipeline hygiene and seller applications from the desktop or a mobile environment.
@@ -42,41 +42,45 @@
       %h6.c-blue.p-top-10 Marketing
   .row
     .small-12.large-9.columns
-      %p.p-top-10 Marketing Executives need… 
+      %p.p-top-10.c-orange Marketing Executives need… 
       %p.p-top-5 Access to campaign performance metrics, including costs, leads generated and converted to sales opportunities, revenue, and ROI quickly and in a summary view.  
-      %p.p-top-10 Marketing Managers need…
+      %p.p-top-10.c-orange Marketing Managers need…
       %p.p-top-5 Access to campaign performance metrics , including costs, leads generated and converted to sales opportunities, revenue, and ROI, plus marketing resources and tools that they use every day quickly and easily.
-      %p.p-top-10 Tradeshow Leads need…
+      %p.p-top-10.c-orange Tradeshow Managers need…
       %p.p-top-5 To display customize and interactive tiles on the desktop to excite show attendees at the booth. Today, they use powerpoint presentations and videos. Tomorrow, Bloom can provide your organization with a customized, interactive, touch screen enabled set of tiles with links to giveaways forms, applications, live, streaming videos, demos of your products. This customized view can be experienced on TV—size touch screens, tablets, or mobile devices.
-      %p.p-top-10 Internal Communication Leads need…
+      %p.p-top-10.c-orange Internal Communication Managers need…
       %p.p-top-5 To disseminate company news to employees around the world.  Today, many communication specialists deliver their communication via a static, HTML-based email to employee inboxes. Tomorrow, Bloom can provide your organization a customized Marketing or Internal Communication Apportal that is unique for every employee based on their role function in the organization. Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need to know with the touch of the screen.
   .row
-    .small-12.large-9.columns
+    .small-12.large-9.columns.bgc-lghter-gray
       %h6.c-drk-gray.p-top-10 Unlocking the power of role-based Apportal access
   .row
-    .small-12.large-6.columns
+    .small-12.large-6.columns.bgc-lghter-gray
       %p.p-top-10 Unlock the power of the cloud with Enterprise-level Identity Services. Enable users to work from virtually any location using any device. Give them always-on access to all their work resources using a single set of credentials protected with multi-factor authentication. After a user has signed in, they get a single sign-on access to their apps and data directly in their Apportal. Clients can also use Microsoft Azure Active Directory at a global scale to centrally manage employees’ access and provide single sign-on to Microsoft services such as Microsoft Azure, Microsoft O365, Microsoft Dynamics CRM, Windows Intune, and thousands of non-Microsoft cloud applications.
-    .small-12.large-3.columns
+    .small-12.large-3.columns.bgc-lghter-gray
       = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image3-12.png', style: "max-height: 130px;")
-    .small-12.large-3.columns
+    .small-12.large-3.columns.bgc-lghter-gray
   .row
     .small-12.large-9.columns
-      %h6.c-drk-gray.p-top-10 Apportals are for any industry, any enterprise function, and for any role!
+      %h6.c-drk-gray.p-top-10h3.c-blue Apportals are for any industry, any enterprise function, and for any role!
   .row
     .small-12.large-9.columns
-      %p.p-top-10 Healthcare providers who want to provide customized views of patient data, inventory, systems, websites to their doctors, nurses, and administrators.
+      %p.p-top-10.c-orange Healthcare providers need...
+      %p.p-top-10  To provide customized views of patient data, inventory, systems, websites to their doctors, nurses, and administrators.
   .row
     .small-12.large-9.columns
-      %p.p-top-10 Security professionals who want to disseminate customized, geo-based threat advisories to field-based security consultants.
+      %p.p-top-10.c-orange Security professionals need...
+      %p.p-top-10  To disseminate customized, geo-based threat advisories to field-based security consultants.
   .row
     .small-12.large-9.columns
-      %p.p-top-10 Security Solution providers who want to deliver security data to their clients through a desktop application versus a website or excel-based product.
+      %p.p-top-10.c-orange Security solution providers...
+      %p.p-top-10  To deliver security data to their clients through a desktop application versus a website or excel-based solution.
   .row
     .small-12.large-9.columns
-      %p.p-top-10 Organizations with mobile workers. HQ executives can push customized views to their workers, focusing them on the key information and resources that make them  more productive.  HQ executives can also view a roll up of information by geo on their desktop with the touch of the screen.
+      %p.p-top-10.c-orange Organizations with mobile workers need...
+      %p.p-top-10 To push customized views to their workers, focusing them on the key information and resources that make them  more productive. HQ executives can also view a roll up of information by geo on their desktop with the touch of the screen.
   .row
     .small-12.large-9.columns
-      %p.p-top-10 The practical, but innovate applications of an Apportal are only limited by our imagination.
+      %p.p-top-10 The practical, but innovative applications of an Apportal are only limited by our imagination.
   .strata-small
     .row.p-20
       .small-12.medium-2.columns
