updates to styling

--- a/app/views/apportal/index.html.haml
+++ b/app/views/apportal/index.html.haml
@@ -61,7 +61,7 @@
     .small-12.large-3.columns.bgc-lghter-gray
   .row
     .small-12.large-9.columns
-      %h6.c-drk-gray.p-top-10h3.c-blue Apportals are for any industry, any enterprise function, and for any role!
+      %h3.c-blue Apportals are for any industry, any enterprise function, and for any role!
   .row
     .small-12.large-9.columns
       %p.p-top-10.c-orange Healthcare providers need...
