updates to styling final

--- a/app/views/apportal/index.html.haml
+++ b/app/views/apportal/index.html.haml
@@ -51,14 +51,14 @@
       %p.p-top-10.c-orange Internal Communication Managers need…
       %p.p-top-5 To disseminate company news to employees around the world.  Today, many communication specialists deliver their communication via a static, HTML-based email to employee inboxes. Tomorrow, Bloom can provide your organization a customized Marketing or Internal Communication Apportal that is unique for every employee based on their role function in the organization. Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need to know with the touch of the screen.
   .row
-    .small-12.large-9.columns.bgc-lghter-gray
+    .small-12.large-6.columns.bgc-lghter-gray
       %h6.c-drk-gray.p-top-10 Unlocking the power of role-based Apportal access
   .row
     .small-12.large-6.columns.bgc-lghter-gray
       %p.p-top-10 Unlock the power of the cloud with Enterprise-level Identity Services. Enable users to work from virtually any location using any device. Give them always-on access to all their work resources using a single set of credentials protected with multi-factor authentication. After a user has signed in, they get a single sign-on access to their apps and data directly in their Apportal. Clients can also use Microsoft Azure Active Directory at a global scale to centrally manage employees’ access and provide single sign-on to Microsoft services such as Microsoft Azure, Microsoft O365, Microsoft Dynamics CRM, Windows Intune, and thousands of non-Microsoft cloud applications.
-    .small-12.large-3.columns.bgc-lghter-gray
+    .small-12.large-3.columns
       = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image3-12.png', style: "max-height: 130px;")
-    .small-12.large-3.columns.bgc-lghter-gray
+    .small-12.large-3.columns
   .row
     .small-12.large-9.columns
       %h3.c-blue Apportals are for any industry, any enterprise function, and for any role!
